--- a/complimentary.css
+++ b/complimentary.css
@@ -22,8 +22,18 @@
 	display: inline;
 }
 
+
 .header-buttons {
-	text-align: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+  margin-left: 5px;
+  margin-right: 5px;
+  border:solid black;
+  padding:8px 22px;
 }
 
 form {
