--- a/complimentary.css
+++ b/complimentary.css
@@ -1,69 +1,60 @@
-
-
 * {
-	margin: 0px;
-	padding: 0px;
-	box-sizing: border-box;
-	font-family: gdsherpa, Helvetica, Arial, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: gdsherpa,Helvetica,Arial,sans-serif;
 }
-
 .firstDiv {
-	width: 500px;
-	border: solid blue;
-	margin: 0 auto;
-	margin-top: 40px;
+width: 50%;
+border: solid blue;
+margin: 0 auto;
+margin-top:40px;
 }
-
 .header {
-	text-align: center;
-}
-
-.header h3 {
-	display: inline;
-}
-
-
+    text-align: center;
+    }
+    .header h3 {
+    display: inline;
+    }
+    
 .header-buttons {
     text-align: center;
     display: flex;
     justify-content: center;
+    margin-top: 10px;
+    width:100%;
 }
-
 button {
   margin-left: 5px;
   margin-right: 5px;
-  border:solid black;
+  border: 3px solid black;
   padding:8px 22px;
+  flex-grow: 1;
 }
-
 form {
-	padding: 40px;
+    padding: 100px
 }
-
 form input {
-	width: 100%;
-	margin-bottom: 5px;
-	padding: 15px;
-	border: .0625rem solid #d4dbe0;
+  width: 100%;
+  margin-bottom: 5px;
+  padding: 15px;
+  border:  .0625rem solid #d4dbe0;
 }
-
 form div {
-	border: solid red;
-	width: 100%;
-	height: 100px;
-	display: none;
+border: solid red ;
+width:100%;
+height:100px;
+display: none;
 }
-
 .fas {
-	display: none;
+display:none;
 }
-
 .shader {
-	border: solid black;
-	width: 100%;
+ border: solid black;
+ width:100%;
+}
+fieldset {
+border:none;
 }
 
-fieldset {
-	border: none;
-}
 
