--- a/complimentary.css
+++ b/complimentary.css
@@ -1,60 +1,73 @@
+
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-    font-family: gdsherpa,Helvetica,Arial,sans-serif;
+margin:0px;
+padding:0px;
+box-sizing:border-box;
+font-family: gdsherpa,Helvetica,Arial,sans-serif;
+
 }
-.firstDiv {
-width: 50%;
-border: solid blue;
+
+.first-div {
+max-width:600px;
+border:solid #d4dbe0;
 margin: 0 auto;
-margin-top:40px;
+margin-top: 40px;
 }
-.header {
-    text-align: center;
-    }
-    .header h3 {
-    display: inline;
-    }
-    
+.innercontainer {
+max-width:100%;
+text-align:center;
+
+}
 .header-buttons {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-    width:100%;
+margin-top:15px;
+
 }
 button {
-  margin-left: 5px;
-  margin-right: 5px;
-  border: 3px solid black;
-  padding:8px 22px;
-  flex-grow: 1;
+background-color: White; 
+border: 2px solid black;
+color:  black;
+padding: 10px 30px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+margin-left:5px;
+margin-right:5px;
+cursor: pointer;
 }
-form {
-    padding: 100px
+button:hover {
+background-color: black;
+color: white;
+transition: 0.3s;
+
 }
-form input {
-  width: 100%;
-  margin-bottom: 5px;
-  padding: 15px;
-  border:  .0625rem solid #d4dbe0;
+
+i {
+margin-right:10px;
+font-size:20px;
 }
-form div {
-border: solid red ;
-width:100%;
-height:100px;
-display: none;
+input {
+margin-top:10px;;
 }
-.fas {
-display:none;
+
+.submit {
+background-color: black;
+color: white;
 }
-.shader {
- border: solid black;
- width:100%;
+#hidden-div {
+border: 1px solid	#483C32;
+display: block;
 }
 fieldset {
 border:none;
 }
+form {
+padding: 40px;
+}
 
-
+form input {
+width: 100%;
+margin-bottom: 5px;
+padding: 15px;
+border: 1px solid	#483C32;
+}
