--- a/valid.css
+++ b/valid.css
@@ -31,8 +31,6 @@ text-align: center;
 text-decoration: none;
 display: inline-block;
 font-size: 16px;
-margin-left:5px;
-margin-right:5px;
 cursor: pointer;
 }
 button:hover {
@@ -52,8 +50,7 @@ margin-top:10px;;
 }
 
 .submit {
-background-color: black;
-color: white;
+width:100%;
 }
 #hidden-div {
 border: 1px solid	#483C32;
